--- a/AwesomeScreencast/res/layout/activity_awesome_screencast_behind.xml
+++ b/AwesomeScreencast/res/layout/activity_awesome_screencast_behind.xml
@@ -1,7 +1,9 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:id="@+main/menufragment"
     tools:context=".AwesomeScreencastActivity" >
 
-</LinearLayout>
+</FrameLayout>
