hardware accelerated for ui

--- a/AwesomeScreencast/res/layout/activity_awesome_screencast.xml
+++ b/AwesomeScreencast/res/layout/activity_awesome_screencast.xml
@@ -3,7 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AwesomeScreencastActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +27,14 @@
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:text="@string/go" />
+            android:text="@string/go"><requestFocus/></Button>
+        <Button
+            android:id="@+src/go_png"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="@string/go_png" />
     </LinearLayout>
 
         <LinearLayout
