--- a/AwesomeScreencast/res/layout/activity_awesome_screencast.xml
+++ b/AwesomeScreencast/res/layout/activity_awesome_screencast.xml
@@ -6,15 +6,14 @@
     android:orientation="vertical"
     android:focusable="true"
     android:focusableInTouchMode="true">
-
+            
     <EditText
         android:id="@+src/file"
-        android:inputType="textUri|textNoSuggestions"
-        android:textIsSelectable="true"
+        android:inputType="textNoSuggestions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"/>
-            
+    
     <Button
         android:id="@+src/fc"
         android:layout_width="wrap_content"
